# nixfiles

./: .bash_profile  .bashrc  README.md  config.nix  flake.nix  full.nix  home.nix  papirus-icons.nix  result  users.nix
.config/alacritty/: alacritty.yml
.config/nvim/: init.vim
.config/polybar/: config
.config/polybar/scripts/: polypomo
.xmonad/: stack.yaml  startup.sh  xmonad.hi  xmonad.hs
.xmonad/.stack-work/: stack.sqlite3
config/alacritty/: alacritty.yml
config/alacritty/dark-theme/: alacritty.yml
config/alacritty/light-theme/: alacritty.yml
config/dunst/: dunstrc
config/nvim/: autopairs.lua  bufferline.lua  catppuccin.lua  cmp.lua  gitsigns.lua  indent-blankline.lua  lspconfig.lua  lualine.lua  luasnip.lua  neorg.lua  session-manager.lua  telescope.lua  telescope.vim  tree-lua.vim  treesitter.lua  web-devicons.lua
config/rofi/: config.rasi
config/rofi/launcher/: style.rasi
config/taffybar/: WindowsRedux.hs  flake.nix  selene-taffybar.cabal  taffybar.css  taffybar.hs
config/taffybar/dark-theme/: overlay.nix  result  selene-taffybar-dark.cabal  taffybar-dark.css  taffybar.hs
config/taffybar/light-theme/: overlay.nix  selene-taffybar-light.cabal  taffybar-light.css  taffybar.hs
config/xmonad/: startup.sh  xmonad.hs
modules/system/: base-system.nix  fonts.nix  full-system.nix  gopass.nix  gpg.nix  users.nix
modules/user/applications/: alacritty-dark-theme.nix  alacritty-light-theme.nix  (+7 more)
overlays/: overlay.nix
release notes/: 1-1.md
system/: hardware-configuration.nix  nixos.nix
users/: selene-home.nix
users/selene/: home.nix
(+24 files in other folders)
